--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,8 @@ AC_PREREQ([2.68])
 AC_INIT([reconnaissance_voix], [0.1])
 AM_INIT_AUTOMAKE(reconnaissance_voix, 0.1)
 
-CXXFLAGS="-g -ansi -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -D_DEBUG_ -std=c++11"
+CXXFLAGS="-g -ansi -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -D_DEBUG_ "
+#CXXFLAGS="-g -ansi -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -D_DEBUG_ -std=c++11"
 
 # Checks for programs.
 AC_PROG_CXX
