--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,12 @@ openal-soft
 project
 sdlgfx
 autom4te.cache
+aclocal.m4
+config.log
+config.status
+depcomp
+install-sh
+src/.deps
+src/test1
+src/project_voix
 
