--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = project_voix test1
 
 AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
-project_voix_SOURCES = main.cpp MyAL.cpp MyAL.h ft.cpp ft.h
+project_voix_SOURCES = main.cpp MyAL.cpp MyAL.h ft.cpp ft.h traitement.h traitement.cpp
 project_voix_LDADD = $(INTI_LIBS) $(SDL_LIBS)
 test1_LDADD = $(INTI_LIBS) $(SDL_LIBS)
 test1_SOURCES = main.cpp.back.cpp ft.cpp ft.h
