--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,7 +61,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_project_voix_OBJECTS = main.$(OBJEXT) MyAL.$(OBJEXT) ft.$(OBJEXT)
+am_project_voix_OBJECTS = main.$(OBJEXT) MyAL.$(OBJEXT) ft.$(OBJEXT) \
+	traitement.$(OBJEXT)
 project_voix_OBJECTS = $(am_project_voix_OBJECTS)
 am__DEPENDENCIES_1 =
 project_voix_DEPENDENCIES = $(am__DEPENDENCIES_1)
@@ -186,7 +187,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
-project_voix_SOURCES = main.cpp MyAL.cpp MyAL.h ft.cpp ft.h
+project_voix_SOURCES = main.cpp MyAL.cpp MyAL.h ft.cpp ft.h traitement.h traitement.cpp
 project_voix_LDADD = $(INTI_LIBS) $(SDL_LIBS)
 test1_LDADD = $(INTI_LIBS) $(SDL_LIBS)
 test1_SOURCES = main.cpp.back.cpp ft.cpp ft.h
@@ -281,6 +282,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ft.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.cpp.back.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/traitement.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
