--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,17 @@
 *~
 *.swp
 *.wav
+*.bmp
 *.layout
 configure
 Makefile.in
 Makefile
 src/Makefile
 src/Makefile.in
+src/*/Makefile
+src/*/Makefile.in
+*/.deps
+*/*/.deps
 obj
 bin
 libsndfile
