--- a/src/Game/Makefile.am
+++ b/src/Game/Makefile.am
@@ -2,4 +2,4 @@ bin_PROGRAMS = Jeu
 
 AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
 Jeu_SOURCES = Map.cpp Map.h Drawable.h Drawable.cpp main.cpp Item.h Item.cpp Frog.h Frog.cpp Game.h Game.cpp Menu.h Menu.cpp Score.h Score.cpp
-Jeu_LDADD = $(INTI_LIBS) $(SDL_LIBS) -lSDL_image
+Jeu_LDADD = $(INTI_LIBS) $(SDL_LIBS) -lSDL_image -lSDL_ttf
