--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = test test_load_sound test_draw_spectro test_draw_spectro_mel test_save_sound test_dtw test_dtw_enreg test_detecter_debut_signal
+bin_PROGRAMS = test test_load_sound test_draw_spectro test_draw_spectro_mel test_save_sound test_dtw test_dtw_enreg test_detecter_debut_signal dtw_all
 
 AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
 test_SOURCES = test.cpp
@@ -17,3 +17,5 @@ test_dtw_enreg_SOURCES = test_dtw_enreg.cpp ../MyAL.cpp ../MyAL.h ../traitement.
 test_dtw_enreg_LDADD = $(INTI_LIBS) $(SDL_LIBS)
 test_detecter_debut_signal_SOURCES = test_detecter_debut_signal.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
 test_detecter_debut_signal_LDADD = $(INTI_LIBS) $(SDL_LIBS)
+dtw_all_SOURCES = dtw_all.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
+dtw_all_LDADD = $(INTI_LIBS) $(SDL_LIBS)
