eclatement du fichier Menu

--- a/src/Game/Makefile.am
+++ b/src/Game/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = Jeu
 
 AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
-Jeu_SOURCES = Map.cpp Map.h Drawable.h Drawable.cpp main.cpp Item.h Item.cpp Frog.h Frog.cpp Game.h Game.cpp Menu.h Menu.cpp Score.h Score.cpp ../MyAL.h ../MyAL.cpp Joueur.h Joueur.cpp ../traitement.cpp ../traitement.h ../ft.h ../ft.cpp
+Jeu_SOURCES = Map.cpp Map.h Drawable.h Drawable.cpp main.cpp Item.h Item.cpp Frog.h Frog.cpp Game.h Game.cpp Menu.h Menu.cpp Score.h Score.cpp Menu_Option.h Menu_Option.cpp Choix_Utilisateur.h Choix_Utilisateur.cpp Menu_enregistrement.h Menu_enregistrement.cpp ../MyAL.h ../MyAL.cpp Joueur.h Joueur.cpp ../traitement.cpp ../traitement.h ../ft.h ../ft.cpp
 Jeu_LDADD = $(INTI_LIBS) $(SDL_LIBS) -lSDL_image -lSDL_ttf
